--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_marginRight="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/nameEt"
             android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -66,6 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/genderRadio">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/rollNoEt"
             android:layout_width="match_parent"
             android:inputType="text"
             android:layout_height="wrap_content" />
